# fineregr

./: .gitignore  Cargo.toml  README.md
src/: index.html  main.rs  test.toml
